# jot-down

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
migrations/postgres/: 20250615000001_initial.sql
scripts/: install.sh
src/: main.rs  notes_io.rs
src/ai/: ask.rs  chat.rs  embedder.rs  mod.rs  retriever.rs
src/app/: actions.rs  commands.rs  mod.rs  state.rs
src/config/: mod.rs  settings.rs
src/logging/: mod.rs
src/models/: mod.rs  note.rs  tag.rs
src/notes/: daily.rs  mod.rs  wikilinks.rs
src/storage/: mod.rs  remote.rs  sqlite.rs
src/storage/migrations/: 20250615000001_initial.sql  20250615000002_sync_queue.sql  20250615000003_conflicts.sql  20250615000004_content_hash.sql  20250615000005_sync_backoff.sql  20250615000006_ai_foundation.sql  20250615000007_ai_vec_notes.sql  20250615000008_embedding_backoff.sql  20250619000009_daily_date.sql  20250619000010_wikilinks.sql
src/tui/: clipboard.rs  events.rs  layout.rs  markdown.rs  mod.rs  wrap.rs
src/workers/: ask.rs  embeddings.rs  mod.rs  persistence.rs  sync.rs
