[package]
name = "jot-down"
version = "0.1.0"
edition = "2021"
description = "A fast, offline-first terminal note-taking application"

[features]
default = ["ai"]
ai = ["dep:sqlite-vec", "dep:libsqlite3-sys", "dep:reqwest"]
syntax-highlight = ["dep:syntect"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
rand = "0.8"
pulldown-cmark = "0.10"
phf = { version = "0.11", features = ["macros"] }
syntect = { version = "5", optional = true, default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
# AI: statically embed the sqlite-vec extension and register it as a SQLite
# auto-extension. libsqlite3-sys is pinned to sqlx 0.8's version so they share
# one sqlite (auto-extension must apply to sqlx's connections).
sqlite-vec = { version = "0.1.9", optional = true }
libsqlite3-sys = { version = "0.30", optional = true }
# AI: OpenAI-compatible chat client for "ask your notes" (local LLM by default).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
